cmake_minimum_required(VERSION 3.20)
project(BharatOS_Services C ASM)

add_subdirectory(process_manager)
add_subdirectory(vm_manager)

# Phase 1: Native Service Skeletons
option(BHARAT_BUILD_USER_SERVICES_STUBS "Build foundational user-space service stubs" ON)
if(BHARAT_BUILD_USER_SERVICES_STUBS)
    add_subdirectory(init)
    add_subdirectory(namesvc)
    add_subdirectory(servicemgr)
endif()

# Core System Services (Multi-kernel / Distributed OS)
option(BHARAT_BUILD_CORE_SERVICES "Build core multi-kernel distributed OS services" ON)
if(BHARAT_BUILD_CORE_SERVICES)
    add_subdirectory(coremgr)
    add_subdirectory(memmgr)
    add_subdirectory(schedmgr)
    add_subdirectory(devmgr)
    add_subdirectory(accelmgr)
    add_subdirectory(storagemgr)
    add_subdirectory(faultmgr)
    add_subdirectory(telemetrymgr)
endif()
add_subdirectory(file_system)
add_subdirectory(drivers)
add_subdirectory(crypto)
add_subdirectory(console)
if(BHARAT_ENABLE_SERVICE_BOOT_DISPLAYD)
    add_subdirectory(boot_displayd)
endif()

# Legacy monolithic network service (transitional)
if(BHARAT_ENABLE_SERVICE_NETWORK)
    add_subdirectory(net)
endif()

# Profile-driven network stack and manager
option(BHARAT_BUILD_NETWORK_STUBS "Build network manager and stack user-space stubs" ON)
if(BHARAT_BUILD_NETWORK_STUBS AND BHARAT_ENABLE_SERVICE_NETWORK)
    add_subdirectory(netmgr)
    add_subdirectory(netstack)
    add_subdirectory(netfast)
endif()
